--- a/_config.yml
+++ b/_config.yml
@@ -35,9 +35,9 @@ disqus:
   categories: [] # only show disqus for posts that have these categories
 
 # if you don't have any of social below, comment the line
-instagram: pratyuxhsharma
+instagram: prxtyushsharma
 linkedin: pratyuxhsharma
-spotify: 31r6afaliqqks3n2g2o5jqpfi67e
+spotify: 31znhzt5pcpshrc3fep6mqcd56me
 github: Pratyuxh
 quora: Pratyuxhsharma
 medium: pratyuxhsharma
