--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ instagram: prxtyushsharma
 linkedin: pratyuxhsharma
 spotify: 31znhzt5pcpshrc3fep6mqcd56me
 github: Pratyuxh
-quora: Pratyuxhsharma
+# quora: Pratyuxhsharma
 medium: pratyuxhsharma
 email: writetopratyushs@gmail.com
 
