--- a/_config.yml
+++ b/_config.yml
@@ -56,7 +56,7 @@ authors:
     twitter: jamesfoster
   pratyush_sharma:
     name: Pratyush Sharma
-    bio: Full Stack Engineer YOE6 DTU'20 IIITB'24
+    bio: Full Stack Engineer DTU'20 IIITB'24
     external-image: false
     picture: assets/images/profile.jpeg
     twitter: prxtyushsharma
